# minisandbox

./: .gitignore  CMakeLists.txt  README.md  hello  init.sh  minisandbox  run_tests.sh  sandbox  sandbox-linux
.github/workflows/: sandbox.yml
docs/: architecture.md
docs/file_protection/: README.md
docs/rlimits/: README.md  rlimits.md  rlimits_dump.cpp
src/: main.cpp
src/bomb/: bomb.cpp  bomb.h
src/container/: Container.cpp  Container.h
src/empowerment/: empowerment.cpp  empowerment.h  empowerment.sh  exec.cpp  main.cpp  run_all.sh
src/sandbox/: Sandbox.cpp  Sandbox.h  sandbox.cpp  sandbox.h
tests/: CMakeLists.txt
tests/bomb/: CMakeLists.txt  test_bomb.cpp
tests/empowerment/: exec.cpp  exec_exec.cpp  test_empowerment.cpp  test_empowerment.sh  tests_scenarios.sh
tests/examples/bash/: bash.json  bash_full.json
tests/examples/forks/: forks  forks.cpp  forks.json
tests/examples/hello_world/: hello  hello.json
tests/examples/nice/: nice  nice.cpp  nice.json
tests/examples/wait/: wait  wait.cpp  wait.json
tests/rlimits/: CMakeLists.txt  rlimits_test.cpp
tests/rlimits/mem/: CMakeLists.txt  mem.cpp
tests/rlimits/time/: CMakeLists.txt  time.cpp
tests/signals/: config.json  config_kill_parent.json  kill_parent.sh  tests.sh  wait.cpp
